--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "sgmf-scripts --test test/unit/**/*.js",
-        "lint": "sgmf-scripts --lint js && sgmf-scripts --lint css",
+        "lint": "sgmf-scripts --lint js",
         "upload": "sgmf-scripts --upload -- ",
-        "uploadCartridge": "sgmf-scripts --uploadCartridge plugin_filternavigation",
-        "compile:js": "sgmf-scripts --compile js",
-        "compile:scss": "sgmf-scripts --compile css",
-        "build": "npm run compile:js && npm run compile:scss",
+        "uploadCartridge": "sgmf-scripts --uploadCartridge lib_dynamiccaching && sgmf-scripts --uploadCartridge plugin_dynamiccaching",
         "watch": "sgmf-scripts --watch"
     },
     "repository": {
